--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,59 @@
-# Dependencies
+# =========================
+# GLOBAL
+# =========================
 node_modules/
+**/node_modules/
 
-# Environment variables
-*.env
 .env
-.env.local
-.env.*.local
+.env.*
+!.env.example
 
-# Build outputs
-dist/
-build/
+# =========================
+# FRONTEND (Vite/React)
+# =========================
+frontend/.env
+frontend/.env.*
+frontend/dist/
+frontend/build/
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-logs
-*.log
+# =========================
+# BACKEND (Node/Express)
+# =========================
+backend/.env
+backend/.env.*
+backend/logs/
+backend/*.log
 
-# OS files
-.DS_Store
-Thumbs.db
-
-# IDEs
-.vscode/
-.idea/
-
-# Coverage
-coverage/
-
-# Backend specific
+# =========================
+# DATABASE FILES
+# =========================
 *.sqlite
 *.sqlite3
 *.db
+
+# =========================
+# DOCKER
+# =========================
 *.pem
+docker-data/
+
+# =========================
+# LOGS
+# =========================
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# =========================
+# OS
+# =========================
+.DS_Store
+Thumbs.db
+
+# =========================
+# IDE
+# =========================
+.vscode/
+.idea/
