--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,18 @@
-FROM node:20 as build
+# Build stage
+FROM node:20 AS build
 WORKDIR /app
 COPY . .
 RUN npm install
 RUN npm run build
 
+# Nginx stage
 FROM nginx:alpine
+
+# Copy built files
 COPY --from=build /app/dist /usr/share/nginx/html
+
+# Replace default nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
